[package]
name = "aral-trait"
description = "ARAL trait."
version = "0.1.0-alpha.3"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
