[package]
name = "aral"
description = "Async Runtime Aggregation Layer."
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = "../README.md"

[features]
runtime-tokio = ["aral-runtime-tokio"]
# runtime-async-std = ["async-std"]

[dependencies]
aral-runtime-noop = { workspace = true }
aral-runtime-tokio = { workspace = true, optional = true }
aral-trait = { workspace = true }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docs_rs"]
