[package]
name = "aral-runtime-tokio"
description = "ARAL runtime for tokio."
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["fs", "time", "rt", "io-util"] }
aral-trait = { version = "0.1.0", path = "../../aral-trait" }
