[package]
name = "integration"
version = "0.0.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aral = { workspace = true, features = ["runtime-tokio"] }
tokio = { version = "1.33.0", features = ["full"] }
